Bug 735342 - CanSkip for unoptimizable nodes held by binding manager. r=smaug